# FairnessCheck

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_SUMMARY.md  README.md  config.example.yaml  pyproject.toml  verify_setup.py
.github/workflows/: code-quality.yml  docker-publish.yml  test.yml
data/: README.md  gender_fairness_segment_cautious_dataset.csv  test_dataset.example.csv
data/adult_source/: adult-data.csv  adult-test.csv
mock_server/: Dockerfile  README.md  app.py
src/fairness_check/: __init__.py  ai_client.py  config.py  fairness_check_cmd.py  inference_client.py  metrics.py  runner.py
tests/: conftest.py  test_ai_client.py  test_config.py  test_fairness_check_cmd.py  test_inference_client.py  test_integration.py  test_metrics.py  test_metrics_fairlearn_validation.py  test_runner.py
